--- a/SiteJogo/login.html
+++ b/SiteJogo/login.html
@@ -22,12 +22,28 @@
                 <span>Ou use seu E-mail e crie uma nova senha</span>
                 <input type="email" placeholder="E-mail">
                 <input type="password" placeholder="Senha">
-                <a href="#">Esqueceu sua senha?</a>
-                <button>Cadastrar</button>
+                <a href="#"><u>Esqueceu sua senha?</u></a>
+                <button>Entrar</button>
+            </form>
+        </div>
+        <div class="form-container login">
+            <form>
+                <h1>Entre na sua conta!</h1>
+                <div class="icone-social">
+                    <a href="https://accounts.google.com/v3/signin/identifier?hl=pt-br&ifkv=ATuJsjzSSTG0kBVhSSQy7AnXjcGqa9T7JwPdk8R_-tpvF0InnthoQjnvCKKEpLQVGpFHRnAhp8Zhgw&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-956024247%3A1709691765318651&theme=mn" target="_blank" class="soci-icon"><i class="fa-brands fa-google"></i></a>
+                    <a href="https://github.com/login" target="_blank" id="github" class="soci-icon"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://appleid.apple.com/sign-in" target="_blank" class="soci-icon"><i class="fa-brands fa-apple"></i></a>
+                    <a href="https://pt-br.facebook.com/login/device-based/regular/login/" target="_blank" class="soci-icon"><i class="fa-brands fa-facebook"></i></a>
+                </div>
+                <span>Ou use seu E-mail e entre com sua senha</span>
+                <input type="email" placeholder="E-mail">
+                <input type="password" placeholder="Senha">
+                <a href="#"><u>Esqueceu sua senha?</u></a>
+                <button>Entrar</button>
             </form>
         </div>
         <div class="painel-container">
-            <div class="painel">
+            <div class="painel">    
                 <div class="posicao-painel painel-esquerda">
                     <ul>
                     <h1>Bem-Vindo Novamente!</h1>
