--- a/SiteJogo/index.html
+++ b/SiteJogo/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h3>logo</h3>
-        <ul>
+        <h2>Logo</h2>
+        <ul>         
             <li><a href="Inicio" class="ativo">Início</a></li>
             <li><a href="Nosso Jogo">Nosso Jogo!</a></li>
             <li><a href="Sobre Nós">Sobre Nós</a></li>
@@ -19,7 +19,7 @@
     <section>
         <img src="assets/img/stars.png" id="stars">
         <img src="assets/img/moon.png" id="moon">
-        <h2 id="text">Moon Light</h2>
+        <h2 id="text">Star lity</h2>
         <a href="#sec" id="btn">Explorar</a>
         <img src="assets/img/mountains_behind.png" id="mountains_behind">
         <img src="assets/img/mountains_front.png" id="mountains_front">
