--- a/SiteJogo/login.html
+++ b/SiteJogo/login.html
@@ -22,6 +22,7 @@
                 <span>Ou use seu E-mail e crie uma nova senha</span>
                 <input type="email" placeholder="E-mail">
                 <input type="password" placeholder="Senha">
+                <input type="password" placeholder="Confirme sua senha">
                 <a href="#"><u>Esqueceu sua senha?</u></a>
                 <button>Entrar</button>
             </form>
